Clearer Alpha Video Output #42997

Closed
opened 2014-12-23 19:10:56 +01:00 by Aaron Carlisle · 14 comments
Member

System Information

Windows 8.0 Intel HD 4600

Blender Version

Broken: 2.72b

Short description of error

I don't know weather this is a bug or a design issue. Some codecs don't show that they support Alpha Channels.

Example PNG codec shows that it supports Alpha and HuffYUV does support Alpha but Blender does not specify this

Exact steps for others to reproduce the error

  1. Open Blender
  2. In Properties change the render output to a movie file e.g. H.264
  3. Under encoding select a format e.g. QuickTime
  4. Under Codec choose PNG
  5. Now look back in Output gives you the option for BW RGB and RGBA
  6. Back in codec choose another codec that supports alpha e.g. HuffYUV.
  7. Now Looking back in the Output you only get the option of BW and RGB

This is the only known one that has this bug but other codecs that support Alpha that I don't know of because of this bug may.

**System Information** Windows 8.0 Intel HD 4600 **Blender Version** Broken: 2.72b **Short description of error** I don't know weather this is a bug or a design issue. Some codecs don't show that they support Alpha Channels. Example PNG codec shows that it supports Alpha and HuffYUV does support Alpha but Blender does not specify this **Exact steps for others to reproduce the error** 1. Open Blender 2. In Properties change the render output to a movie file e.g. H.264 3. Under encoding select a format e.g. QuickTime 4. Under Codec choose PNG 5. Now look back in Output gives you the option for BW RGB and RGBA 6. Back in codec choose another codec that supports alpha e.g. HuffYUV. 7. Now Looking back in the Output you only get the option of BW and RGB This is the only known one that has this bug but other codecs that support Alpha that I don't know of because of this bug may.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

This issue was referenced by 607c45ae6b

This issue was referenced by 607c45ae6b8ecf0b4ce5278f4fbecb575efcb308
Sergey Sharybin self-assigned this 2014-12-24 14:55:37 +01:00

More like a feature request, but will commit the changes when Git is open after the release.

More like a feature request, but will commit the changes when Git is open after the release.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 607c45ae6b.

Closed by commit 607c45ae6b.
Author
Member

Are HuffYUV and PNG the only codecs that support alpha?

Are HuffYUV and PNG the only codecs that support alpha?

For that you'll need to look over FFmpeg headers and extract that information manually. Also, some of the codecs might support alpha in ffmpeg and not in other applications. So it's somewhat dangerous option to play with..

For that you'll need to look over FFmpeg headers and extract that information manually. Also, some of the codecs might support alpha in ffmpeg and not in other applications. So it's somewhat dangerous option to play with..
Author
Member

From what I looked at there were one or two more that support alpha but HuffYUV is the only one that does not have the alpha channel option

From what I looked at there were one or two more that support alpha but HuffYUV is the only one that does not have the alpha channel option

It shuld have alpha option in the tonight's buildbot (which is in progress atm).

It shuld have alpha option in the tonight's buildbot (which is in progress atm).
Author
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Member

This is not in 2.73

This is not in 2.73

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

It is not indeed because commit was done after the code base freeze and it is not a crucial bugfix so was not ported to the release branch.

It is not indeed because commit was done after the code base freeze and it is not a crucial bugfix so was not ported to the release branch.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42997
No description provided.