Fix T42997: Support RGBA output for HuffYUV

More like a feature request but was simple to support.